--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </div>
             <div class="right">
                 <div class="home">Home</div>
-                <div class="home">My Work</div>
-                <div class="home">About me</div>
-                <div class="home">Contact me</div>
+                <div class="work">Portfolio</div>
+                <div class="about">About me</div>
+                <div class="contact">Contact me</div>
             </div>
         </nav>
     </header>
@@ -88,10 +88,10 @@
             <h1>Kartik_calling_Kartik</h1>
             <p id="branching">UI/UX | Product | Branding | Graphics</p>
             <div class="sources">
-                <i class='bx bxl-linkedin-square'></i>
-                <i class='bx bxl-twitter'></i>
-                <i class='bx bxl-instagram' ></i>
-                <i class='bx bxl-whatsapp'></i>
+                <a href="https://www.linkedin.com/in/kartik-garg-t26/"><i class='bx bxl-linkedin-square bx-tada linkedin' ></i></a>
+                <i class='bx bxl-twitter bx-tada bx-rotate-90 twitter' ></i>
+                <i class='bx bxl-instagram bx-tada instagram' ></i>
+                <i class='bx bxl-whatsapp bx-tada whatsapp' ></i>
             </div>
         </div>
     </footer>
